# fantasy-football-info

./: README.md  main.py  pyproject.toml
ff-data-service/: docker-compose.yml
ff-data-service/app/: main.py
ff-data-service/app/api/: players.py  router.py
ff-data-service/app/core/: config.py  db.py  dependencies.py  enums.py  utils.py
ff-data-service/app/models/: games.py  players.py
ff-data-service/app/schema/: players.py
ff-data-service/app/services/: player_info.py
ff-data-service/docker/: Dockerfile
ff-data-service/requirements/: base.txt
ff-data-service/scripts/: requirements.sh
