[project]
name = "fantasy-football-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.10.1",
    "fastapi[service,standard]>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.41",
]
